# dazzle

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rust-analyzer.toml  rust-toolchain.toml
addon/: Cargo.toml
addon/src/: lib.rs
dazzle/: Cargo.toml  build.rs
dazzle/src/: default_values.pcf  main.rs  particles_manifest.rs  pcf_defaults.rs  styles.rs
dazzle/src/app/: addon_manager.rs  config.rs  file_explorer.rs  initial_load.rs  mod.rs  process.rs  tf_dir_picker.rs
dazzle/src/static/: dazzlevguicache.res
dazzle/src/static/images/: warning.ase
dmx/: Cargo.toml
dmx/src/: attribute.rs  dmx.rs  index.rs  lib.rs  medicgun_beam.pcf  rankup.pcf
experiments/tf2-bsearch-strip/: Cargo.toml
experiments/tf2-bsearch-strip/src/: main.rs
paths/: Cargo.toml
pcf/: Cargo.toml
pcf/src/: attribute.rs  index.rs  lib.rs  new.rs  pcf.rs  strings.rs
pcfpack/: Cargo.toml
pcfpack/src/: lib.rs
qc/: Cargo.toml
qc/src/: lib.rs
src/: addon.rs  app.rs  main.rs  packing.rs  patch.rs  paths.rs  pcf_defaults.rs  process.rs  styles.rs  view_installer.rs  view_tf_dir.rs  vpk.rs  vpk_writer.rs
src/app/: addon_manager.rs  initial_load.rs  mod.rs
studiomdl/: Cargo.toml
studiomdl/src/: lib.rs
tools/defaultmap/: Cargo.toml
tools/defaultmap/src/: main.rs
tools/pcfstrip/: Cargo.toml
tools/pcfstrip/src/: defaults.rs  main.rs  patch.rs
tools/pcftree/: Cargo.toml
tools/pcftree/src/: main.rs
writevpk/: Cargo.toml
writevpk/src/: lib.rs  pack.rs  patch.rs
