[workspace]
resolver = "3"
default-members = [ "dazzle" ]
members = [
    "addon",
    "dazzle",
    "dmx",
    "paths",
    "pcf",
    "pcfpack",
    "nanoserde",
    "writevpk",
    "tools/pcftree",
    "tools/pcfstrip",
]

[workspace.dependencies]
anyhow = "1.0"
buf_read_write = "0.5"
byteorder = "1.5"
bytes = "1.11"
copy_dir = "0.1"
glob = "0.3"
md-5 = "0.10"
ordered-float = "5.0"
ordermap = "1.0"
thiserror = "2.0"
typed-path = "0.11"
type-state-builder = "0.5"
vpk = "0.3"

addon = { path = "addon"}
dmx = { path = "dmx" }
nanoserde = { path = "nanoserde", default-features = false, features = ["std", "json"] }
paths = { path = "paths" }
pcf = { path = "pcf" }
pcfpack = { path = "pcfpack" }
writevpk = { path = "writevpk" }

[workspace.lints.clippy]
empty_loop = "forbid"
infinite_loop = "deny"
mem_forget = "deny"

[profile.profiling]
inherits = "release"
debug = true
