[package]
name = "addon"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
copy_dir.workspace = true
dmx.workspace = true
glob.workspace = true
keyvalues-parser.workspace = true
paths.workspace = true
pcf.workspace = true
thiserror.workspace = true
typed-path.workspace = true
vpk.workspace = true