

[package]
name = "dazzle"
description = "process and install TF2 mods"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = []
skip-with-dx80-dx90_slow = []

[dependencies]
addon.workspace = true
anyhow.workspace = true
buf_read_write.workspace = true
byteorder.workspace = true
bytes.workspace = true
copy_dir.workspace = true
dmx.workspace = true
faccess.workspace = true
glob.workspace = true
md-5.workspace = true
nanoserde.workspace = true
ordermap.workspace = true
paths.workspace = true
pcf.workspace = true
pcfpack.workspace = true
thiserror.workspace = true
typed-path.workspace = true
vpk.workspace = true
writevpk.workspace = true

eframe = "0.33"
egui_extras = { version = "0.33", features = [ "all_loaders" ] }
image = { version = "0.25", features = [ "png" ]}
directories = { version = "6.0" }
derive_more = { version = "2.1", features = [ "from", "into", "display" ] }
relative-path = "2.0"
single-instance = "0.3"
rayon = "1.11"
rfd = "0.17"
ron = "0.12"
workerpool = "1.2"
atomic-counter = "1.0"
itertools = "0.14"
walkdir = "2.5"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.9"

[build-dependencies]
anyhow.workspace = true
byteorder.workspace = true
copy_to_output = "2.2.0"
dmx.workspace = true
glob = "0.3"
keyvalues-parser.workspace = true
ordermap.workspace = true
pcf.workspace = true
typed-path.workspace = true