[package]
name = "pcf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
derive_more = { version = "2.1", features = [ "from", "into", "display" ] }
dmx.workspace = true
either = "1.15"
thiserror.workspace = true
type-state-builder.workspace = true
ordered-float.workspace = true
ordermap.workspace = true
nanoserde.workspace = true
itertools = "0.14"
petgraph = "0.8"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
empty_loop = "forbid"
infinite_loop = "deny"
mem_forget = "deny"
