[package]
name = "pcfstrip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
bytes.workspace = true
buf_read_write = "0.5"
dmx.workspace = true
glob.workspace = true
hex_fmt = "0.3"
pcf.workspace = true
relative-path = "2.0"
thiserror.workspace = true
vpk.workspace = true
